test/expected/explain_auf-c.out
explain auto f()
        ^
9: error: function returning "auto" not supported in C
